--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
-<div id="top">
-  <h1>Sam Fisher</h1>
-</div>
-<div id="bottom">
-  <p>Erstellung kleiner Webseiten</p>
-  <a><p id="link">Portfolio</p></a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>kleine Seiten</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div id="top">
+    <h1>Sam Fisher</h1>
+  </div>
+  <div id="bottom">
+    <p>Erstellung kleiner Webseiten</p>
+    <a><p id="link">Portfolio</p></a>
+  </div>
+</body>
