--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="top">
-    <h1>Sam Fisher</h1>
+    <h1>Ulrich Chaumette</h1>
   </div>
   <div id="bottom">
     <p>Erstellung kleiner Webseiten</p>
